fix white space

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,8 @@
 
 body, html {
   height: 100%;
+  background-image:url(../img/blurred-background-86.jpg);
+
 }
 
 .header h1 {
@@ -70,7 +72,7 @@ body, html {
 }
 
 #sidebar {
-    position:absolute;
+    position:fixed;
     top:0; bottom:0; left:0;
     width:100px;
     background: #545454;
@@ -106,6 +108,7 @@ body, html {
 
 #card
 {
+
     background-color: white; 
     width: 70%;
     height: 200px;
